<resources>
    <string name="app_name">Service Fusion demo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="link_register">Need an account? Register here.</string>
    <string name="action_register">Register</string>
    <string name="link_sign_in">Already have an account? Login here.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">"Authentication failed."</string>
    <string name="other_options">"or"</string>

    <!-- String related to main menu -->
    <string name="new_entry_menu">"New Entry"</string>
    <string name="settings_menu">"Settings"</string>
    <string name="sign_out_menu">"Sign Out"</string>
</resources>
